[tool.poetry]
name = "training-db-utils"
version = "0.1.0"
description = ""
authors = ["Omar Amer <oamer@keybiz.it>"]
readme = "README.md"
packages = [{include = "training_db_utils"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
